# miau

./: AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  miau.spec.in
debian/: changelog  control  copyright  examples  files  info  miau.postinst.debhelper  miau.prerm.debhelper  rules
doc/: Makefile.am  miau.1  miau.texi
misc/: Makefile.am  miau-check  miau-rotatelog  miaurc.in
src/: Makefile.am  ascii.c  ascii.h  automode.c  automode.h  chanlog.c  chanlog.h  channels.c  channels.h  client.c  client.h  commands.c  commands.h  common.c  common.h  conntype.h  dcc.c  dcc.h  error.c  error.h  etc.h  ignore.c  ignore.h  irc.c  irc.h  list.c  list.h  llist.c  llist.h  log.c  log.h  match.c  match.h  matchlist.c  matchlist.h  messages.h  miau.c  miau.h  onconnect.c  onconnect.h  (+21 more)
