AM_YFLAGS = -d
bin_PROGRAMS = miau
miau_SOURCES = ascii.c automode.c channels.c client.c commands.c common.c dcc.c llist.c ignore.c irc.c log.c match.c miau.c onconnect.c parser.c perm.c qlog.c remote.c server.c table.c tools.c
miau_SOURCES += ascii.h automode.h channels.h client.h commands.h common.h dcc.h llist.h ignore.h irc.h log.h match.h miau.h onconnect.h parser.h perm.h qlog.h remote.h server.h table.h tools.h conntype.h messages.h
