# $Id$

AM_YFLAGS = -d
bin_PROGRAMS = miau
miau_SOURCES = ascii.c ascii.h \
		automode.c automode.h \
		channels.c channels.h \
		chanlog.c chanlog.h \
		client.c client.h \
		commands.c commands.h \
		common.c common.h \
		dcc.c dcc.h \
		error.c error.h \
		list.c list.h \
		llist.c llist.h \
		ignore.c ignore.h \
		irc.c irc.h \
		log.c log.h \
		match.c match.h \
		matchlist.c matchlist.h \
		miau.c miau.h \
		onconnect.c onconnect.h \
		parser.c parser.h \
		perm.c perm.h \
		privlog.c privlog.h \
		qlog.c qlog.h \
		remote.c remote.h \
		server.c server.h \
		table.c table.h \
		tools.c tools.h
